# tdbus

./: .gitignore  CMakeLists.txt  README.md  meson.build
include/: tdbus.h  tdbus_message.h  tdbus_message_iter.h  tdbus_watcher.h
src/: CMakeLists.txt  dbus.c  dbus_msg.c  meson.build  tdbus.c  tdbus.h  tdbus_array.c  tdbus_internal.h  tdbus_match.c  tdbus_msg.c  tdbus_msg_internal.h  tdbus_msg_read.c  tdbus_msg_write.c  tdbus_server.c  tdbus_watcher.c
test/: CMakeLists.txt  meson.build  test_message.c  test_service.c  test_tdbus1.c
